--- a/src/Components/Header/styles.module.css
+++ b/src/Components/Header/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 72px;
     padding-right: 16px;
-    background-color: var(--nav-bg);
+    background-color: var(--800);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +20,7 @@
     height: 72px;    
     border: none;
     object-fit: contain;
-    background-color: var(--nav-menuButton-bg);
+    background-color: var(--700);
 }
 
 .header_menuButton:hover{
@@ -45,7 +45,7 @@
 .header_line{
     width: 1px;
     height: 40px;
-    background-color: var(--nav-line-bg);
+    background-color: var(--600);
 }
 
 .header_documentData{
@@ -110,7 +110,7 @@
     border-radius: 4px;
     cursor: pointer;
     border: none;
-    background-color: var(--nav-saveButton-bg);
+    background-color: var(--orange);
     cursor: pointer;
     color: #FFF;
     font-family: var(--roboto);
@@ -125,7 +125,7 @@
 }
 
 .header_saveButton:hover{
-    background-color: var(--nav-saveButton-bg-hover);
+    background-color: var(--orange-hover);
 }
 
 .header_saveButton img {
