--- a/src/Components/Menu/styles.module.css
+++ b/src/Components/Menu/styles.module.css
@@ -1,28 +1,79 @@
 .menu{
-    width: 250px;
+    width: 0px;
     height: 100vh;
     grid-row: 1/3;
-    background-color: var(--menu-bg);
+    background-color: var(--900, #1D1F22);
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 0px;
+    position: relative;
 }
 
+.menuOpen{
+    width: 250px;
+    padding: 27px 24px 24px 24px;
+}
 
-.documentData{
+.menu_logo{
+    display: none;
+    width: 131px;
+    object-fit: contain;
+    margin-bottom: 5px;
+}
+
+.menu_title{
+    color: #7C8187;
+    font-family: var(--roboto);
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 2px;
+    margin-bottom: 5px;
+}
+
+.menu_button{
+    width: 100%;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: var(--Orange, #E46643);
+    color: var(--100, #FFF);
+    font-family: var(--roboto);
+    font-size: 0.9375rem;
+    font-weight: 400;
+}
+
+.menu_button:hover{
+    background: var(--Orange-Hover, #F39765);
+}
+
+.menu_documents{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+}
+
+.menu_documentData{
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 13px auto;
     column-gap: 16px;
     row-gap: 3px;
 }
 
-.documentData img{
+.menu_documentData img{
     align-self: center;
     grid-row: 1/3;
     width: 13px;
     object-fit: contain;
 }
 
-.documentData h2{
-    color: #7C8187;
+.menu_documentData a{
+    cursor: pointer;
+    color: var(--500, #7C8187);
     font-family: var(--roboto);
     font-size: 0.8125rem;
     font-style: normal;
@@ -30,11 +81,22 @@
     line-height: normal;
 }
 
-.documentData h1{
+.menu_documentData a:hover{
+    color: var(--Orange, #E46643);
+}
+
+.menu_documentData h2{
     color: #FFF;
     font-family: var(--roboto);
     font-size: 0.9375rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+
+@media(max-width: 800px){
+    .menu_logo{
+        display: block;
+    }
 }
