--- a/src/Components/Editor/styles.module.css
+++ b/src/Components/Editor/styles.module.css
@@ -7,7 +7,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    resize: horizontal;
+    overflow-x: hidden;
 }
 
 .preview{
@@ -16,6 +16,8 @@
 
 .preview div {
     padding: 23px;
+    height: 87.4725274725vh;
+    overflow-y: auto;
 }
 
 .editor_title, .preview_title{
@@ -36,8 +38,39 @@
     align-items: center;
 }
 
+.preview_title{
+    display: flex;
+    justify-content: space-between;
+    padding-right: 16px;
+}
+
+.preview_icon_hidden, .preview_icon_visible{
+    cursor: pointer;
+    width: 16px;
+    height: 11.2px;
+    mask-position: center;
+    -webkit-mask-position: center;
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    background-color: var(--500, #7C8187);    
+}
+
+.preview_icon_visible{
+    mask-image: url('./icons/icon-show-preview.svg');
+    -webkit-mask-image: url('./icons/icon-show-preview.svg');
+}
+
+.preview_icon_hidden {
+    mask-image: url('./icons/icon-hide-preview.svg');
+    -webkit-mask-image: url('./icons/icon-hide-preview.svg'); 
+}
+
+.preview_icon_hidden:hover, .preview_icon_visible:hover{
+    background-color: var(--Orange, #E46643);;
+}
+
 .editor_textarea{
-    height: 100%;
+    height: 87.4725274725vh;  
     padding: 9px 16px;
     border: none;
     resize: none;
@@ -46,7 +79,8 @@
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px; 
+    overflow-y: auto;
 }
 
 .editor_textarea:focus{
@@ -191,7 +225,6 @@
 
 
 .preview pre {
-    width: 672px;
     height: 122px;
     padding: 24px;
     border-radius: 4px;
