--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,7 @@
     background-color: #eee;
     background-repeat: no-repeat;
     background-position: 50%;
+    cursor: col-resize;
 }
 
 .gutter.gutter-horizontal {
@@ -65,7 +66,9 @@
     --800: #2B2D31;
     --700: #35393F;    
     --600: #5A6069;   
+    --500: #7C8187;
     --200: #F5F5F5; 
+    --100: #FFF;
     --orange: #E46643;
     --orange-hover: #F39765;
 }
@@ -79,8 +82,7 @@
 
 
 html, body, #root{
-    min-height: 100vh;
-    overflow-x: hidden;
+    height: 100vh;
+    overflow: hidden;
     width: 100%;
-    
 }
