--- a/src/Components/Editor/styles.module.css
+++ b/src/Components/Editor/styles.module.css
@@ -10,9 +10,14 @@
     overflow-x: hidden;
 }
 
-.preview{
+.preview.light{
     border-left: 1px solid var(--300, #E4E4E4);
 }
+
+.preview.dark{
+    border-left: 1px solid  #3c4046;
+}
+
 
 .preview div {
     padding: 23px;
@@ -20,11 +25,18 @@
     overflow-y: auto;
 }
 
+
+.preview div.light{
+    background-color: white ;
+}
+
+.preview div.dark{
+    background-color: var(--1000, #151619);
+}
+
 .editor_title, .preview_title{
     height: 42px;
     flex-shrink: 0;
-    background-color: var(--200, #F5F5F5);
-    color: var(--500, #7C8187);
     font-family: var(--roboto);
     text-transform: uppercase;
     font-size: 0.875rem;
@@ -38,21 +50,31 @@
     align-items: center;
 }
 
+.editor_title.light, .preview_title.light{
+    background-color: var(--200, #F5F5F5);
+    color: var(--500, #7C8187);
+}
+
+.editor_title.dark, .preview_title.dark{
+    background-color: var(--900, #1D1F22);
+    color: var(--400, #C1C4CB);
+}
+
 .preview_title{
     display: flex;
     justify-content: space-between;
     padding-right: 16px;
 }
 
+
 .preview_icon_hidden, .preview_icon_visible{
     cursor: pointer;
     width: 16px;
-    height: 11.2px;
+    height: 12.2px;
     mask-position: center;
     -webkit-mask-position: center;
     mask-repeat: no-repeat;
-    -webkit-mask-repeat: no-repeat;
-    background-color: var(--500, #7C8187);    
+    -webkit-mask-repeat: no-repeat; 
 }
 
 .preview_icon_visible{
@@ -65,8 +87,15 @@
     -webkit-mask-image: url('./icons/icon-hide-preview.svg'); 
 }
 
+.preview_icon_hidden.light, .preview_icon_visible.light {
+    background-color: var(--500, #7C8187);    
+}
+.preview_icon_hidden.dark, .preview_icon_visible.dark {
+    background-color: #C1C4CB
+}
+
 .preview_icon_hidden:hover, .preview_icon_visible:hover{
-    background-color: var(--Orange, #E46643);;
+    background-color: var(--Orange, #E46643);
 }
 
 .editor_textarea{
@@ -74,13 +103,22 @@
     padding: 9px 16px;
     border: none;
     resize: none;
-    color: var(--700, #35393F);
     font-family: var(--roboto-mono);
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; 
     overflow-y: auto;
+}
+
+.editor_textarea.light {
+    color: var(--700, #35393F);
+    background-color: white;
+}
+
+.editor_textarea.dark{
+    color: var(--400, #C1C4CB);
+    background: var(--1000, #151619);
 }
 
 .editor_textarea:focus{
@@ -91,13 +129,39 @@
 
 
 
+.preview.light{
+    color: var(--500, #7C8187);
+}
+
+.preview.dark{
+    color: var(--400, #C1C4CB);
+}
+
+.preview.light h1,
+.preview.light h2,
+.preview.light h3,
+.preview.light h4,
+.preview.light h5{
+    color: var(--700, #35393F);
+}
 
 
+.preview.dark h1,
+.preview.dark h2,
+.preview.dark h3,
+.preview.dark h4,
+.preview.dark h5{
+    color: white;
+}
+
+.preview.light h6, .preview.dark h6{
+    color: var(--Orange, #E46643);
+}
 
 .preview h1:not(.preview_title), 
 .preview h2, .preview h3, 
-.preview h4, .preview h5 {
-    color: var(--700, #35393F);
+.preview h4, .preview h5,
+.preview h6 {
     font-family: var(--roboto-slab);
 }
 
@@ -133,14 +197,12 @@
 }
 
 .preview h6{
-    color: var(--Orange, #E46643);
     font-size: 0.875rem;
     font-weight: 700;
     margin-bottom: 21px;
 }
 
 .preview p:not(blockquote p){
-    color: var(--500, #7C8187);
     font-family: var(--roboto-slab);
     font-size: 0.875rem;
     font-style: normal;
@@ -166,7 +228,6 @@
 
 
 .preview ol li{
-    color: var(--500, #7C8187);
     font-family: var(--roboto-slab);
     font-size: 0.875rem;
     font-style: normal;
@@ -180,7 +241,6 @@
 }
 
 .preview ul li {
-    color: var(--500, #7C8187);
     font-family: var(--roboto-slab);
     font-size: 0.875rem;
     font-style: normal;
@@ -206,12 +266,18 @@
     border-left: 4px solid var(--orange);
     border-radius: 4px;
     padding: 24px;
-    background-color: var(--200, #F5F5F5);
     margin-bottom: 20px;
 }
 
+.preview.light blockquote{
+    background-color: var(--200, #F5F5F5);
+} 
+
+.preview.dark blockquote{
+    background-color: var(--800, #2B2D31);
+}
+
 .preview blockquote p, .preview a {
-    color: #35393F;    
     font-family: var(--roboto-slab);
     font-size: 0.875rem;
     font-style: normal;
@@ -228,15 +294,30 @@
     white-space: pre-wrap;
     padding: 24px;
     border-radius: 4px;
-    background: var(--200, #F5F5F5);
+    background-color: var(--200, #F5F5F5);
     margin-bottom: 20px;
+}
+
+.preview.light pre{
+    background-color: var(--200, #F5F5F5);
+}
+
+.preview.dark pre{
+    background-color: var(--800, #2B2D31);
 }
 
 .preview code{
     width: 100%;
-    color: var(--700, #35393F);
     font-family: var(--roboto-mono);
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 24px; /* 171.429% */
+}
+
+.preview.light code{
+    color: var(--700, #35393F);
+}
+
+.preview.dark code{
+    color: white;
 }
