--- a/src/Assets/Common/Styles/styles.module.css
+++ b/src/Assets/Common/Styles/styles.module.css
@@ -1,119 +1,4 @@
-
-.editor, .preview {
-    display: flex;
-    flex-direction: column;
-}
-
-.editor_title, .preview_title{
-    text-transform: uppercase;
-    width: 100%;
-    height: 42px;
-    padding: 0px 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: var(--500, #7C8187);
-    background-color: var(--200, #F5F5F5);
-    font-family: var(--roboto);
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 2px;
-}
-
-.editor_textarea{
-    height: 87.4725274725vh;  
-    padding: 16px;
-    border: none;
-    resize: none;
-    color: var(--700, #35393F);
-    font-family: var(--roboto-mono);
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; 
-    overflow-y: auto;
-}
-
-.editor_textarea:focus{
-    outline: none;
-}
-
-
-.editor_title.light, .preview_title.light{
-    background-color: var(--200, #F5F5F5);
-    color: var(--500, #7C8187);
-}
-
-.editor_title.dark, .preview_title.dark{
-    background-color: var(--900, #1D1F22);
-    color: var(--400, #C1C4CB);
-}
-
-
-.editor_textarea.light {
-    color: var(--700, #35393F);
-    background-color: white;
-}
-
-.editor_textarea.dark{
-    color: var(--400, #C1C4CB);
-    background: var(--1000, #151619);
-}
-
-
-.previewHideIcon.light, .previewShowIconlight {
-    background-color: var(--500, #7C8187);    
-}
-.previewHideIcon.dark, .previewShowIcon.dark {
-    background-color: #C1C4CB
-}
-
-.preview div {
-    padding: 23px;
-    height: 87.4725274725vh;
-    overflow-y: auto;
-}
-
-.previewShowIcon, .previewHideIcon{
-    cursor: pointer;
-    mask-repeat: no-repeat;
-    -webkit-mask-repeat: no-repeat;
-    mask-position: center;
-    -webkit-mask-position: center;
-    background-color: var(--500, #7C8187);
-}
-
-.previewHideIcon:hover, .previewShowIcon:hover{
-    background-color: var(--Orange, #E46643);
-}
-
-
-.previewShowIcon{
-    width: 16px;
-    height: 11.2px;
-    mask-image: url('./icons/icon-show-preview.svg');
-    -webkit-mask-image: url('./icons/icon-show-preview.svg');
-}
-
-.previewHideIcon {
-    width: 16px;
-    height: 11.2px;
-    mask-image: url('./icons/icon-hide-preview.svg');
-    -webkit-mask-image: url('./icons/icon-hide-preview.svg');
-}
-
-
-
-.preview div.light{
-    background-color: white ;
-}
-
-.preview div.dark{
-    background-color: var(--1000, #151619);
-}
-
+/* these styles will be used for the Editor and MobileEditor components */
 
 .preview.light{
     color: var(--500, #7C8187);
@@ -123,19 +8,19 @@
     color: var(--400, #C1C4CB);
 }
 
-.preview.light div h1:not(.preview_title),
-.preview.light div h2,
-.preview.light div h3,
+.preview.light h1:not(.preview_title),
+.preview.light h2,
+.preview.light h3,
 .preview.light h4,
 .preview.light h5{
     color: var(--700, #35393F);
 }
 
 
-.preview.dark div h1:not(.preview_title),
-.preview.dark div h2,
-.preview.dark div h3,
-.preview.dark div h4,
+.preview.dark h1:not(.preview_title),
+.preview.dark h2,
+.preview.dark h3,
+.preview.dark h4,
 .preview.dark h5{
     color: white;
 }
