--- a/src/Components/Grid/styles.module.css
+++ b/src/Components/Grid/styles.module.css
@@ -1,4 +1,6 @@
 .container{
+    width: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
